client/src/utils/utils.scss
/* ... */
select {
  position: relative;
  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='41px' height='26px' viewBox='0 0 41 26' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3C/defs%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cpolygon id='Path-3' fill='%23000000' points='0 5.38215461 19.9830489 25.3652035 40.1398855 5.20836689 34.9315186 0 19.8691842 15.0623344 4.83971338 0.0328636246'%3E%3C/polygon%3E%3C/g%3E%3C/svg%3E%0A");
  background-position: right 0.5rem center;
  background-repeat: no-repeat;
  background-size: 0.8rem;
  color: var(--c-noir);
  // border: none;
  padding: calc(var(--spacing) / 2) calc(var(--spacing) / 1.5);
  padding-right: calc(var(--spacing) / 2 + 1.5rem);
  min-width: 0px;
  cursor: pointer;
  // line-height: 1.5;
  border-radius: var(--input-border-radius);
  user-select: none;

  &:disabled {
    background-image: url("data:image/svg+xml,%3C%3Fxml version=%271.0%27 encoding=%27UTF-8%27%3F%3E%3Csvg width=%2741px%27 height=%2726px%27 viewBox=%270 0 41 26%27 version=%271.1%27 xmlns=%27http://www.w3.org/2000/svg%27 xmlns:xlink=%27http://www.w3.org/1999/xlink%27%3E%3Cdefs%3E%3C/defs%3E%3Cg id=%27Page-1%27 stroke=%27none%27 stroke-width=%271%27 fill=%27none%27 fill-rule=%27evenodd%27%3E%3Cpolygon id=%27Path-3%27 fill=%27%23CCCCCC%27 points=%270 5.38215461 19.9830489 25.3652035 40.1398855 5.20836689 34.9315186 0 19.8691842 15.0623344 4.83971338 0.0328636246%27%3E%3C/polygon%3E%3C/g%3E%3C/svg%3E%0A");
  }

  &.is--active {
    background-color: var(--active-color);
    color: white;
  }
}

input[type="file"] {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  z-index: -1;

  + label {
    display: inline-flex;
    flex-direction: row nowrap;
    align-items: center;
    justify-content: center;

    // width: 100%;
    // max-width: 380px;
    text-align: center;

    cursor: pointer;
    overflow: hidden;
    word-break: break-word;

    padding: calc(var(--spacing) / 2) calc(var(--spacing) / 1);
    border-radius: var(--input-border-radius);
    margin-bottom: 0;

    transition: color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
  }

  :focus + label,
  &.has-focus + label {
    outline: 1px dotted var(--c-rouge);
    outline: -webkit-focus-ring-color auto 5px;
  }

  + label * {
    display: block;
  }

  + label svg {
    width: 1.5rem;
    height: 1.5rem;
    flex-shrink: 0;
    fill: currentColor;
    // margin-right: calc(var(--spacing) / 1);
  }

  &.inputfile-2 + label {
    background-color: var(--c-rouge);
    color: white;
    border: 0px solid currentColor;
    white-space: nowrap;

    &:hover {
      background-color: var(--c-rouge_fonce);
    }
  }
}

.fieldCaption {
  font-weight: 500;
  font-size: var(--sl-font-size-x-small);
  font-family: var(--sl-font-mono);
}
.u-filename {
  // font-weight: 500;
  // font-size: var(--sl-font-size-small);
  font-family: var(--sl-font-mono);
}

.u-defaultValue {
  margin: calc(var(--spacing) / 8);
  font-size: var(--sl-font-size-x-small);
  text-align: right;
}

.u-colorBlack {
  color: var(--c-noir);
}
.u-colorWhite {
  color: white;
}
.u-colorRed {
  color: var(--c-rouge);
}

.u-colorBleuvert {
  color: var(--c-bleuvert);
}

code {
  font-family: "Fira Code";
  // white-space: pre;
  font-size: 0.9em;
  padding: 0.2em 0.4em;
  border-radius: 0.2em;
  background-color: var(--c-gris_clair);
  color: var(--c-noir);
}

.u-fontCode {
  font-family: "Fira Code";
}

.u-divCentered {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.u-switch {
  /* Switches */
  --switch-font-size: var(--input-font-size);
  --switch-bg-color: var(--c-gris);
  --switch-bg-color-hovered: var(--c-rouge_clair);
  --switch-bg-color-checked: var(--c-rouge);
  --switch-border-radius: var(--switch-size);

  --switch-size: 2rem;
  --switch-size-small: 1rem;
  --switch-size-big: 3rem;
  --switch-thumb-bg-color: white;
  --switch-thumb-border-radius: 50%;
  --switch-thumb-spacing: 2px;
  --switch-speed: 0.2s;

  font-size: var(--switch-font-size);

  &:hover {
    --switch-bg-color: var(--switch-bg-color-hovered);
  }

  input {
    display: none !important;
  }

  input + label {
    position: relative;
    min-width: calc(var(--switch-size) * 2);
    height: var(--switch-size);
    line-height: var(--switch-size);
    display: inline-block;
    cursor: pointer;
    outline: none;
    user-select: none;
    vertical-align: middle;
    /* text-indent: calc(var(--switch-size) * 2 + .5rem); */
    padding-left: calc(var(--switch-size) * 2 + 0.5rem);
  }

  input + label::before,
  input + label::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: var(--switch-size);
    width: calc(var(--switch-size) * 2);
    bottom: 0;
    display: block;
  }

  input + label::before {
    right: 0;
    background-color: var(--switch-bg-color);
    border-radius: var(--switch-border-radius);
    transition: background-color var(--switch-speed);
  }

  input + label:after {
    top: var(--switch-thumb-spacing);
    left: var(--switch-thumb-spacing);
    width: calc(var(--switch-size) - var(--switch-thumb-spacing) * 2);
    height: calc(var(--switch-size) - var(--switch-thumb-spacing) * 2);
    border-radius: var(--switch-thumb-border-radius);
    background-color: var(--switch-thumb-bg-color);
    transition: margin var(--switch-speed);
  }

  input:checked + label::before {
    background-color: var(--switch-bg-color-checked);
  }

  input:checked + label::after {
    margin-left: var(--switch-size);
  }

  input:disabled + label {
    opacity: 0.5;
    cursor: not-allowed;
  }

  & + .u-switch {
    margin-left: 1rem;
  }
}
.u-switch-xs {
  --switch-size: 0.9rem;
}
/* ... */

